# tools-test

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md
hooks/: conventional_commits.py  format_code.py
scripts/: generate-x64.py
src/app/: CMakeLists.txt
src/app/include/: test_class.h
src/app/include/sub_test_folder/: sub_test_class.h
src/app/src/: main.cpp
